# freertos-toradex

./: .cproject  .cwGeneratedFileSetLog  .project  MK20DN512xxx10_flash.ld  SW-Content-Register-FreeRTOS-BSP-1.0.0-i.MX7D.txt  SW-Content-Register-FreeRTOS-BSP-1.0.1-i.MX7D.txt  gcc_env.bat  k20_tester_Debug_PNE.launch  k20_tester_Debug_Segger.launch  k20_tester_Release_PNE.launch  k20_tester_Release_Segger.launch  readme.txt
CMSIS/: MK20D10.h  MK20D10_features.h  fsl_device_registers.h
board/: board.c  board.h  clock_config.c  clock_config.h  pin_mux.c  usb_host_config.h
drivers/: fsl_clock.h  fsl_flexbus.h  fsl_flexcan.c  fsl_flexcan.h  fsl_sdhc.c  fsl_sdhc.h  fsl_tsi_v2.c  fsl_tsi_v2.h
examples/imx7_colibri_m4/: board.c
examples/imx7_colibri_m4/demo_apps/blinking_imx_demo/armgcc/: CMakeLists.txt
examples/imx7_colibri_m4/demo_apps/blinking_imx_demo/ds5/: .cproject  .project  blinking_imx_demo.wsd
examples/imx7_colibri_m4/demo_apps/blinking_imx_demo/iar/: blinking_imx_demo.ewp  blinking_imx_demo.eww
examples/imx7_colibri_m4/demo_apps/blinking_imx_demo/kds/: .cproject  .project
examples/imx7_colibri_m4/demo_apps/hello_world/: main.c
examples/imx7_colibri_m4/demo_apps/hello_world/armgcc/: CMakeLists.txt
examples/imx7_colibri_m4/demo_apps/hello_world/ds5/: .cproject  .project  hello_world.wsd
examples/imx7_colibri_m4/demo_apps/hello_world/kds/: .cproject  .project
examples/imx7_colibri_m4/demo_apps/hello_world_ddr/ds5/: .project
examples/imx7_colibri_m4/demo_apps/hello_world_ocram/ds5/: .cproject  .project
examples/imx7_colibri_m4/demo_apps/hello_world_qspi/ds5/: .project  hello_world_qspi.wsd
examples/imx7_colibri_m4/demo_apps/sema4_demo/ds5/: .project  sema4_demo.wsd
examples/imx7_colibri_m4/demo_apps/sema4_demo/iar/: sema4_demo.ewp  sema4_demo.eww
examples/imx7_colibri_m4/demo_apps/sensor_demo/armgcc/: CMakeLists.txt
examples/imx7_colibri_m4/demo_apps/sensor_demo/ds5/: .project  sensor_demo.wsd
examples/imx7_colibri_m4/demo_apps/sensor_demo/iar/: sensor_demo.eww
examples/imx7_colibri_m4/driver_examples/adc_imx7d/armgcc/: CMakeLists.txt
examples/imx7_colibri_m4/driver_examples/adc_imx7d/ds5/: .cproject  .project  adc_imx7d_example.wsd
examples/imx7_colibri_m4/driver_examples/gpio_imx/armgcc/: CMakeLists.txt
examples/imx7_colibri_m4/driver_examples/gpio_imx/ds5/: .cproject  .project  gpio_imx_example.wsd
examples/imx7_colibri_m4/driver_examples/gpt/armgcc/: CMakeLists.txt
examples/imx7_colibri_m4/driver_examples/gpt/ds5/: .project  gpt_example.wsd
examples/imx7_colibri_m4/driver_examples/gpt/iar/: gpt_example.eww
examples/imx7_colibri_m4/driver_examples/wdog_imx/armgcc/: CMakeLists.txt
examples/imx7_colibri_m4/driver_examples/wdog_imx/ds5/: .cproject  .project  wdog_imx_example.wsd
examples/imx7_colibri_m4/driver_examples/wdog_imx/iar/: wdog_imx_example.ewp  wdog_imx_example.eww
examples/imx7d_sdb_m4/: board.c
examples/imx7d_sdb_m4/demo_apps/blinking_imx_demo/ds5/: .cproject
examples/imx7d_sdb_m4/demo_apps/hello_world/ds5/: .cproject  .project
examples/imx7d_sdb_m4/demo_apps/hello_world/iar/: hello_world.ewp
examples/imx7d_sdb_m4/demo_apps/hello_world_ddr/ds5/: .cproject
examples/imx7d_sdb_m4/demo_apps/hello_world_qspi/armgcc/: CMakeLists.txt
examples/imx7d_sdb_m4/demo_apps/hello_world_qspi/ds5/: .cproject  .project  hello_world_qspi.wsd
examples/imx7d_sdb_m4/demo_apps/hello_world_qspi/iar/: hello_world_qspi.ewp
examples/imx7d_sdb_m4/demo_apps/sema4_demo/ds5/: .cproject
examples/imx7d_sdb_m4/demo_apps/sensor_demo/armgcc/: CMakeLists.txt
examples/imx7d_sdb_m4/demo_apps/sensor_demo/ds5/: .cproject  .project  sensor_demo.wsd
examples/imx7d_sdb_m4/demo_apps/sensor_demo/iar/: sensor_demo.ewp
examples/imx7d_sdb_m4/driver_examples/adc_imx7d/ds5/: .cproject  .project  adc_imx7d_example.wsd
examples/imx7d_sdb_m4/driver_examples/adc_imx7d/iar/: adc_imx7d_example.ewp
examples/imx7d_sdb_m4/driver_examples/gpio_imx/ds5/: .project
examples/imx7d_sdb_m4/driver_examples/gpio_imx/iar/: gpio_imx_example.eww
examples/imx7d_sdb_m4/driver_examples/gpt/armgcc/: CMakeLists.txt
examples/imx7d_sdb_m4/driver_examples/gpt/ds5/: .cproject  .project
examples/imx7d_sdb_m4/driver_examples/wdog_imx/ds5/: .cproject
examples/imx7d_val_m4/: board.c  board.h
examples/imx7d_val_m4/demo_apps/blinking_imx_demo/: hardware_init.c
examples/imx7d_val_m4/demo_apps/blinking_imx_demo/armgcc/: CMakeLists.txt
examples/imx7d_val_m4/demo_apps/blinking_imx_demo/ds5/: .cproject  .project  blinking_imx_demo.wsd
examples/imx7d_val_m4/demo_apps/ecspi_flash_demo/: ecspi_xfer.c  ecspi_xfer.h  main.c
examples/imx7d_val_m4/demo_apps/ecspi_flash_demo/armgcc/: CMakeLists.txt
examples/imx7d_val_m4/demo_apps/ecspi_flash_demo/ds5/: .cproject  .project  ecspi_flash_demo.wsd
examples/imx7d_val_m4/demo_apps/ecspi_flash_demo/iar/: ecspi_flash_demo.ewp  ecspi_flash_demo.eww
examples/imx7d_val_m4/demo_apps/hello_world/armgcc/: CMakeLists.txt
examples/imx7d_val_m4/demo_apps/hello_world/ds5/: .cproject  .project  hello_world.wsd
examples/imx7d_val_m4/demo_apps/hello_world_ddr/ds5/: .cproject
examples/imx7d_val_m4/demo_apps/hello_world_ocram/ds5/: .cproject
examples/imx7d_val_m4/driver_examples/gpio_imx/: hardware_init.c
examples/vf6xx_colibri_m4/: FreeRTOSConfig.h  pin_mux.c  pin_mux.h
examples/vf6xx_colibri_m4/demo_apps/gpio_sample/: main.c
examples/vf6xx_colibri_m4/demo_apps/gpio_sample/armgcc/: CMakeLists.txt
examples/vf6xx_colibri_m4/demo_apps/hello_world/: main.c
platform/devices/VF6XX/include/: VF6XX_M4.h
platform/devices/VF6XX/startup/: system_VF6XX_M4.c  system_VF6XX_M4.h
platform/drivers/inc/: ccm_vf6xx.h  gpio_vf6xx.h  lpuart_vf6xx.h
platform/drivers/src/: ccm_vf6xx.c  gpio_vf6xx.c  lpuart_vf6xx.c
platform/utilities/inc/: debug_console.h  debug_console_imx.h  debug_console_vf6xx.h
platform/utilities/src/: debug_console.c  debug_console_imx.c  debug_console_vf6xx.c
source/: main.c
startup/: startup_MK20D10.S  system_MK20D10.c  system_MK20D10.h
usb_1.1.0/host/: usb_host_khci.c
usb_1.1.0/osa/: usb_osa.h
(+149 files in other folders)
